syntax = "proto3";

package teamup.svc.user;


service UserService {
    rpc Login(LoginReq) returns (LoginRes);
    rpc GetUserInfo(getUserInfoReq) returns (UserInfo);
}

message LoginReq {
    string code = 1;
}

message LoginRes {
    string token = 1;
    int32 code = 2;
    string msg = 3;
}

message getUserInfoReq {
    int32 userId = 1;
}

message UserInfo {
    string avatar = 1;
    string username = 2;
}